--- a/childbookPilipenko.html
+++ b/childbookPilipenko.html
@@ -17,8 +17,7 @@
         <br> И педали далеко.
     </p>
     <p>
-        <img src="Images/childbook_1_2.png"
-            width="226" height="161">
+        <img src="Images/childbook_1_2.jpg" width="226" height="161">
     </p>
     <p>Мне купили
         <a style="font-weight:bold; font-size: 16px;"> паровозик,</a>
@@ -43,5 +42,5 @@
 
 </html>
 <!-- Картинка 1 в формате PNG, так как при формате GIF снизилось качество изображения(распадается на пиксель в области перехода цветов)
-Картинка 2 в формате PNG, так как при формате GIF возникает та же ситуация, что и с первым изображением
+Картинка 2 в формате JPG, так как при сравнении с PNG изображения почти одинаковы по качеству, но при этом JPG имеет размер в 6 раз меньше
 Картинка 3 в формате GIF, выбран этот формат, потому что при PNG то же качество, но при этом GIF имеет меньший размер в байтах -->
