--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <span style="text-decoration: underline">Подчеркнуть</span>
-    <span style="text-transform: capitalize"> sdjhb,kasdhbdnjaskjhnbvn</span>
+    <span style="text-transform: uppercase"> sdjhb,kasdhbdnjaskjhnbvn</span>
     <ol style="list-style-type: none">
     <li>khkljhljk</li>
     <li>jh,khjad,kbh,kbh</li>
