--- a/FONT_GWF_Pilipenko.html
+++ b/FONT_GWF_Pilipenko.html
@@ -7,8 +7,6 @@
     <link rel="icon" href="Images/favicon12.png" sizes="16x16" type="image/png">
     </link>
     <title>Potter</title>
-    <link rel="icon" href="favicon1.jpg" sizes="16x16" type="image/png">
-    </link>
     <link
         href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Dancing+Script:wght@400..700&display=swap"
         rel="stylesheet">
@@ -19,7 +17,7 @@
 </head>
 
 <body>
-    <div style="font-family: Caveat; font-size: 24px">
+    <div style="font-family: Caveat, cursive; font-size: 24px; min-width: 150px; max-width: auto; text-indent: 35px">
         <h2 style="text-align: center">Серия романов о Гарри Поттере</h2>
         <p style="text-align: center">
             <img src="Images/potter-all.jpg" title="Серия книг о приключениях Гарри Поттера и его друзей"
@@ -33,12 +31,12 @@
         </p>
     </div>
     <hr>
-    <div style="font-family: Kosugi Maru; font-size: 18px; font-weight: bold">
+    <div style="font-family: Kosugi Maru, cursive; font-size: 18px; font-weight: bold; min-width: 150px; max-width: auto">
         <p><a href="#part1">Читать первую книгу</a></p>
         <p><a href="#part2">Читать вторую книгу</a></p>
         <p><a href="#part3">Читать третью книгу</a></p>
     </div>
-    <div style="font-family: Pacifico; font-size: 18px; letter-spacing: 3px">
+    <div style="font-family: Pacifico,fantasy; font-size: 18px; letter-spacing: 3px; min-width: 150px; max-width: auto; text-indent: 35px">
         <p>
             <a id="part1"></a>Жизнь десятилетнего Гарри Поттера нельзя назвать сладкой: его родители умерли, едва ему
             исполнился год, а от дяди и тётки, взявших сироту на воспитание, достаются лишь тычки да подзатыльники. Но в
@@ -47,7 +45,7 @@
             магии. А уже через пару недель Гарри будет мчаться в поезде Хогвартс-экспресс навстречу новой жизни, где его
             ждут невероятные приключения, верные друзья и самое главное — ключ к разгадке тайны смерти его родителей.
         </p>
-        <p style="text-align: left">
+        <p style="text-align: left; text-indent: 0px">
             <img src="Images/potter -1.jpg" title="Гарри Поттер и философский камень"
                 alt="Гарри Поттер и философский камень" width="300" height="400">
         </p>
@@ -59,7 +57,7 @@
             разгадывают загадку Тайной комнаты, и теперь Гарри снова предстоит сразиться с лордом Волан-де-Мортом.
             Сумеет ли он победить на этот раз?
         </p>
-        <p style="text-align: left">
+        <p style="text-align: left; text-indent: 0px">
             <img src="Images/potter -2.jpg" title="Гарри Поттер и тайная комната" alt="Гарри Поттер и тайная комната"
                 width="300" height="400">
         </p>
@@ -70,7 +68,7 @@
             избавиться от Гарри Поттера. Теперь Гарри в опасности, даже за стенами соей волшебной школы, даже среди
             друзей - потому что среди них есть предатель, готовый открыть убийце путь в Хогвартс.
         </p>
-        <p style="text-align: left">
+        <p style="text-align: left; text-indent: 0px">
             <img src="Images/potter -3.jpg" title="Гарри Поттер и узник Азкабана" alt="Гарри Поттер и узник Азкабана"
                 width="300" height="400">
         </p>
