--- a/FONT_GWF_Pilipenko.html
+++ b/FONT_GWF_Pilipenko.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div style="font-family: Caveat, cursive; font-size: 24px; min-width: 150px; max-width: auto; text-indent: 35px">
+    <div style="font-family: Caveat, cursive; font-size: 24px; width: 80%; text-indent: 35px">
         <h2 style="text-align: center">Серия романов о Гарри Поттере</h2>
         <p style="text-align: center">
             <img src="Images/potter-all.jpg" title="Серия книг о приключениях Гарри Поттера и его друзей"
@@ -31,12 +31,12 @@
         </p>
     </div>
     <hr>
-    <div style="font-family: Kosugi Maru, cursive; font-size: 18px; font-weight: bold; min-width: 150px; max-width: auto">
+    <div style="font-family: Kosugi Maru, cursive; font-size: 18px; font-weight: bold; width: 80%">
         <p><a href="#part1">Читать первую книгу</a></p>
         <p><a href="#part2">Читать вторую книгу</a></p>
         <p><a href="#part3">Читать третью книгу</a></p>
     </div>
-    <div style="font-family: Pacifico,fantasy; font-size: 18px; letter-spacing: 3px; min-width: 150px; max-width: auto; text-indent: 35px">
+    <div style="font-family: Pacifico,fantasy; font-size: 18px; letter-spacing: 3px; width: 80%; text-indent: 35px">
         <p>
             <a id="part1"></a>Жизнь десятилетнего Гарри Поттера нельзя назвать сладкой: его родители умерли, едва ему
             исполнился год, а от дяди и тётки, взявших сироту на воспитание, достаются лишь тычки да подзатыльники. Но в
