--- a/MAKET_TABLE.html
+++ b/MAKET_TABLE.html
@@ -1,75 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Dancing+Script:wght@400..700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <table>
-        <caption>ПРИВЕТ УЧАСТНИКАМ СОРЕВНОВАНИЙ&#63;</caption>
+    <table
+        style="font-family: Caveat, cursive; font-size: 20px; font-weight: bold; width: 100%; border-collapse: collapse">
+        <caption style="background-color: aqua; color: rgb(76, 21, 179); padding: 15px 15px 15px 15px">ПРИВЕТ УЧАСТНИКАМ
+            СОРЕВНОВАНИЙ&#33;
+        </caption>
         <tr>
-            <td>
+            <td style="background-color: rgb(227, 230, 108); width: 200px">
                 <ul>Виды спорта:
                     <li>
                         <a
-                        href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BD%D1%8C%D0%BA%D0%BE%D0%B1%D0%B5%D0%B6%D0%BD%D1%8B%D0%B9_%D1%81%D0%BF%D0%BE%D1%80%D1%82">
-                        конькобежный спорт</a>
+                            href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BD%D1%8C%D0%BA%D0%BE%D0%B1%D0%B5%D0%B6%D0%BD%D1%8B%D0%B9_%D1%81%D0%BF%D0%BE%D1%80%D1%82">
+                            конькобежный спорт</a>
                     </li>
-                    <li><a
-                        href="https://ru.wikipedia.org/wiki/%D0%91%D0%B8%D0%B0%D1%82%D0%BB%D0%BE%D0%BD">
-                        биатлон</a>
+                    <li>
+                        <a href="https://ru.wikipedia.org/wiki/%D0%91%D0%B8%D0%B0%D1%82%D0%BB%D0%BE%D0%BD">
+                            биатлон</a>
                     </li>
-                    <li><a
-                        href="https://ru.wikipedia.org/wiki/%D0%A4%D1%83%D1%82%D0%B1%D0%BE%D0%BB">
-                        футбол</a>
+                    <li>
+                        <a href="https://ru.wikipedia.org/wiki/%D0%A4%D1%83%D1%82%D0%B1%D0%BE%D0%BB">
+                            футбол</a>
                     </li>
-                    <li><a
-                        href="https://ru.wikipedia.org/wiki/%D0%A1%D1%82%D1%80%D0%B5%D0%BB%D1%8C%D0%B1%D0%B0_%D0%B8%D0%B7_%D0%BB%D1%83%D0%BA%D0%B0_(%D0%B2%D0%B8%D0%B4_%D1%81%D0%BF%D0%BE%D1%80%D1%82%D0%B0)">
-                        стрельба из лука</a>
+                    <li>
+                        <a
+                            href="https://ru.wikipedia.org/wiki/%D0%A1%D1%82%D1%80%D0%B5%D0%BB%D1%8C%D0%B1%D0%B0_%D0%B8%D0%B7_%D0%BB%D1%83%D0%BA%D0%B0_(%D0%B2%D0%B8%D0%B4_%D1%81%D0%BF%D0%BE%D1%80%D1%82%D0%B0)">
+                            стрельба из лука</a>
                     </li>
-                    <li><a
-                        href="https://ru.wikipedia.org/wiki/%D0%9F%D1%80%D1%8B%D0%B6%D0%BE%D0%BA_%D0%B2_%D0%B4%D0%BB%D0%B8%D0%BD%D1%83">
-                        прыжки в длину</a>
+                    <li>
+                        <a
+                            href="https://ru.wikipedia.org/wiki/%D0%9F%D1%80%D1%8B%D0%B6%D0%BE%D0%BA_%D0%B2_%D0%B4%D0%BB%D0%B8%D0%BD%D1%83">
+                            прыжки в длину</a>
                     </li>
-                    <li><a
-                        href="https://ru.wikipedia.org/wiki/%D0%9F%D1%80%D1%8B%D0%B6%D0%BE%D0%BA_%D0%B2_%D0%B2%D1%8B%D1%81%D0%BE%D1%82%D1%83">
-                        прыжки в высоту</a>
+                    <li>
+                        <a
+                            href="https://ru.wikipedia.org/wiki/%D0%9F%D1%80%D1%8B%D0%B6%D0%BE%D0%BA_%D0%B2_%D0%B2%D1%8B%D1%81%D0%BE%D1%82%D1%83">
+                            прыжки в высоту</a>
                     </li>
-                    <li><a
-                        href="https://ru.wikipedia.org/wiki/%D0%A4%D0%B8%D0%B3%D1%83%D1%80%D0%BD%D0%BE%D0%B5_%D0%BA%D0%B0%D1%82%D0%B0%D0%BD%D0%B8%D0%B5">
-                        фигурное катание</a>
+                    <li>
+                        <a
+                            href="https://ru.wikipedia.org/wiki/%D0%A4%D0%B8%D0%B3%D1%83%D1%80%D0%BD%D0%BE%D0%B5_%D0%BA%D0%B0%D1%82%D0%B0%D0%BD%D0%B8%D0%B5">
+                            фигурное катание</a>
                     </li>
-                    <li><a
-                        href="https://ru.wikipedia.org/wiki/%D0%A1%D0%B8%D0%BD%D1%85%D1%80%D0%BE%D0%BD%D0%BD%D0%BE%D0%B5_%D0%BF%D0%BB%D0%B0%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5">
-                        синхронное плавание</a>
+                    <li>
+                        <a
+                            href="https://ru.wikipedia.org/wiki/%D0%A1%D0%B8%D0%BD%D1%85%D1%80%D0%BE%D0%BD%D0%BD%D0%BE%D0%B5_%D0%BF%D0%BB%D0%B0%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5">
+                            синхронное плавание</a>
                     </li>
-                    <li><a
-                        href="https://ru.wikipedia.org/wiki/%D0%A8%D0%B0%D1%85%D0%BC%D0%B0%D1%82%D1%8B">
-                        шахматы</a>
+                    <li>
+                        <a href="https://ru.wikipedia.org/wiki/%D0%A8%D0%B0%D1%85%D0%BC%D0%B0%D1%82%D1%8B">
+                            шахматы</a>
                     </li>
-                    <li><a
-                        href="https://ru.wikipedia.org/wiki/%D0%A8%D0%B0%D1%88%D0%BA%D0%B8">
-                        шашки</a>
+                    <li>
+                        <a href="https://ru.wikipedia.org/wiki/%D0%A8%D0%B0%D1%88%D0%BA%D0%B8">
+                            шашки</a>
+                    </li>
+                    <li>
+                        <a href="https://ru.wikipedia.org/wiki/%D0%91%D0%BE%D0%B1%D1%81%D0%BB%D0%B5%D0%B9">
+                            бобслей</a>
+                    </li>
+                    <li>
+                        <a href="https://ru.wikipedia.org/wiki/%D0%A5%D0%BE%D0%BA%D0%BA%D0%B5%D0%B9">
+                            хоккей</a>
+                    </li>
+                    <li>
+                        <a href="https://ru.wikipedia.org/wiki/%D0%91%D0%BE%D0%BA%D1%81">
+                            бокс</a>
+                    </li>
+                    <li>
+                        <a href="https://ru.wikipedia.org/wiki/%D0%A2%D0%B5%D0%BD%D0%BD%D0%B8%D1%81">
+                            теннис</a>
+                    </li>
+                    <li>
+                        <a href="https://ru.wikipedia.org/wiki/%D0%91%D0%B0%D1%81%D0%BA%D0%B5%D1%82%D0%B1%D0%BE%D0%BB">
+                            баскетбол</a>
+                    </li>
+                    <li>
+                        <a href="https://ru.wikipedia.org/wiki/%D0%92%D0%BE%D0%BB%D0%B5%D0%B9%D0%B1%D0%BE%D0%BB">
+                            волейбол</a>
+                    </li>
+                    <li>
+                        <a href="https://ru.wikipedia.org/wiki/%D0%9A%D1%91%D1%80%D0%BB%D0%B8%D0%BD%D0%B3">
+                            керлинг</a>
+                    </li>
+                    <li>
+                        <a href="https://ru.wikipedia.org/wiki/%D0%91%D0%BE%D1%80%D1%8C%D0%B1%D0%B0">
+                            борьба</a>
                     </li>
                 </ul>
             </td>
-            <td>
-                <div
-                    style="font-size: 18px; padding: 5px 5px 5px 5px; margin: 5px 5px 5px 5px">
-                    <h3 style="text-align: center">ФУТБОЛ</h3>
-                    <img src="Images/football1.png" title="Команда выиграла кубок"
-                        alt="Команда выиграла кубок" width="200" height="150" style="float: left; margin: 0px 15px 0px 0px">                          
-                Футбо́л (англ. football от foot «ступня» + ball «мяч») — командный вид спорта, в котором целью является забить мяч в ворота соперника ногами или другими частями тела (кроме рук) большее количество раз, чем команда соперника. В настоящее время самый популярный и массовый вид спорта в мире
+            <td style="background: url('Images/ball.png'); background-position: right top; background-repeat: repeat-y">
+                <div style="font-size: 20px; padding: 5px 5px 5px 5px; margin: 5px 5px 5px 5px">
+                    <h3 style="text-align: center; font: bold">ФУТБОЛ</h3>
+                    <img src="Images/football1.png" title="Команда выиграла кубок" alt="Команда выиграла кубок"
+                        width="200" height="150" style="float: left; margin: 0px 15px 15px 0px">
+                    <p>Футбо́л (англ. football от foot «ступня» + ball «мяч») — командный вид спорта, в котором целью
+                        является забить мяч в ворота соперника ногами или другими частями тела (кроме рук) большее
+                        количество раз, чем команда соперника. В настоящее время самый популярный и массовый вид спорта
+                        в мире.
+                    </p>
+                    <p>Есть 17 официальных правил игры, каждое из которых содержит список оговорок и руководящих
+                        принципов. Эти правила предназначены для применения на всех уровнях футбола, хотя есть некоторые
+                        изменения для таких групп, как юниоры, взрослые, женщины и люди с ограниченными физическими
+                        возможностями.
 
-                Есть 17 официальных правил игры, каждое из которых содержит список оговорок и руководящих принципов. Эти правила предназначены для применения на всех уровнях футбола, хотя есть некоторые изменения для таких групп, как юниоры, взрослые, женщины и люди с ограниченными физическими возможностями.
-                
-                Каждая команда состоит максимум из одиннадцати игроков (без учёта запасных), один из которых должен быть вратарём. Правила неофициальных соревнований могут уменьшить количество игроков, максимум до 7. Вратари являются единственными игроками, которым позволено играть руками при условии: они делают это в пределах штрафной площади у своих собственных ворот. Хотя есть различные позиции на поле, эти позиции не обязательны.
-                
-                Цель игры — забить мяч в ворота противника, сделать это как можно большее количество раз и постараться не допустить гола в свои ворота. Матч выигрывает команда, забившая большее количество голов. 
-                        </div>
+                        Каждая команда состоит максимум из одиннадцати игроков (без учёта запасных), один из которых
+                        должен быть вратарём. Правила неофициальных соревнований могут уменьшить количество игроков,
+                        максимум до 7. Вратари являются единственными игроками, которым позволено играть руками при
+                        условии: они делают это в пределах штрафной площади у своих собственных ворот. Хотя есть
+                        различные позиции на поле, эти позиции не обязательны.
+
+                        Цель игры — забить мяч в ворота противника, сделать это как можно большее количество раз и
+                        постараться не допустить гола в свои ворота. Матч выигрывает команда, забившая большее
+                        количество голов.
+                    </p>
+                </div>
             </td>
+        </tr>
+        <tr>
+            <td colspan="2"
+                style="text-align: center; background-color: aqua; color: rgb(76, 21, 179); padding: 25px 25px 25px 25px">
+                ГЛАВНОЕ НЕ ПОБЕДА, А УЧАСТИЕ&#33;
+            </td>
+            <td></td>
         </tr>
     </table>
 </body>
+
 </html>
