--- a/HarryPotterByPilipenko.html
+++ b/HarryPotterByPilipenko.html
@@ -106,10 +106,10 @@
         </div>
     </div>
     <div
-        style="min-height: 200px; font-size: 14px; padding: 5px 5px 5px 5px; margin: 25px 5px 5px 160px; background-color: rgba(222, 184, 135, 0.487)">
+        style="min-height: 200px; font-size: 14px; padding: 5px ; margin: 25px 5px 5px 160px; background-color: rgba(222, 184, 135, 0.487)">
         <img src="Images/potter -1.jpg" title="Гарри Поттер и философский камень"
             alt="Гарри Поттер и философский камень" width="150" height="200" style="float: left">
-        <div style="font-family: Pacifico,fantasy; font-size: 14px; letter-spacing: 3px; margin-left: 155px">
+        <div style="font-family: Pacifico,fantasy; font-size: 14px; letter-spacing: 3px; margin-left: 155px; overflow: hidden">
             <span style="color: red">Ж</span>изнь десятилетнего Гарри Поттера нельзя назвать сладкой: его
             родители умерли, едва ему
             исполнился год, а от дяди и тётки, взявших сироту на воспитание, достаются лишь тычки да
@@ -125,10 +125,10 @@
         </div>
     </div>
     <div
-        style="min-height: 200px; font-size: 14px; padding: 5px 5px 5px 5px; margin: 5px 5px 5px 160px; background-color: rgba(224, 71, 104, 0.487)">
+        style="min-height: 200px; font-size: 14px; padding: 5px; margin: 5px 5px 5px 160px; background-color: rgba(224, 71, 104, 0.487)">
         <img src="Images/potter -2.jpg" title="Гарри Поттер и тайная комната" alt="Гарри Поттер и тайная комната"
             width="150" height="200" style="float: left">
-        <div style="font-family: Pacifico,fantasy; font-size: 14px; letter-spacing: 3px; margin-left: 155px">
+        <div style="font-family: Pacifico,fantasy; font-size: 14px; letter-spacing: 3px; margin-left: 155px; overflow: hidden">
             <span style="color: red">Э</span>то вторая книга о приключениях Гарри Поттера. Он снова вступает
             в отчаянную схватку со
             злом. На этот раз враг его так силен, что надежды на победу почти нет. В Школе чародейства и
@@ -143,10 +143,10 @@
         </div>
     </div>
     <div
-        style="min-height: 200px; font-size: 14px; padding: 5px 5px 5px 5px; margin: 5px 5px 5px 160px; background-color: rgba(113, 107, 99, 0.487)">
+        style="min-height: 200px; font-size: 14px; padding: 5px; margin: 5px 5px 5px 160px; background-color: rgba(113, 107, 99, 0.487)">
         <img src="Images/potter -3.jpg" title="Гарри Поттер и узник Азкабана" alt="Гарри Поттер и узник Азкабана"
             width="150" height="200" style="float: left">
-        <div style="font-family: Pacifico,fantasy; font-size: 14px; letter-spacing: 3px; margin-left: 155px">
+        <div style="font-family: Pacifico,fantasy; font-size: 14px; letter-spacing: 3px; margin-left: 155px; overflow: hidden">
             <span style="color: red">Д</span>венадцать долгих лет в Азкабане - мрачной тюрьме волшебного
             мира - содержался всем
             известный узник по имени Сириус Блэк. Его обвиняли в убийстве тринадцати человек и считали
