--- a/MAKET_TABLE.html
+++ b/MAKET_TABLE.html
@@ -12,8 +12,8 @@
 
 <body>
     <table
-        style="font-family: Caveat, cursive; font-size: 20px; font-weight: bold; width: 100%; border-collapse: collapse">
-        <caption style="background-color: aqua; color: rgb(76, 21, 179); padding: 15px 15px 15px 15px">ПРИВЕТ УЧАСТНИКАМ
+        style="font-family: Caveat, cursive; font-size: 20px; font-weight: bold; width: 100%; border-collapse: collapse; overflow: hidden">
+        <caption style="background-color: aqua; color: rgb(76, 21, 179); padding: 15px">ПРИВЕТ УЧАСТНИКАМ
             СОРЕВНОВАНИЙ&#33;
         </caption>
         <tr>
@@ -100,7 +100,7 @@
                 </ul>
             </td>
             <td style="background: url('Images/ball.png'); background-position: right top; background-repeat: repeat-y">
-                <div style="font-size: 20px; padding: 5px 5px 5px 5px; margin: 5px 5px 5px 5px">
+                <div style="font-size: 20px; padding: 5px; margin: 5px; overflow: hidden">
                     <h3 style="text-align: center; font: bold">ФУТБОЛ</h3>
                     <img src="Images/football1.png" title="Команда выиграла кубок" alt="Команда выиграла кубок"
                         width="200" height="150" style="float: left; margin: 0px 15px 15px 0px">
@@ -129,7 +129,7 @@
         </tr>
         <tr>
             <td colspan="2"
-                style="text-align: center; background-color: aqua; color: rgb(76, 21, 179); padding: 25px 25px 25px 25px">
+                style="text-align: center; background-color: aqua; color: rgb(76, 21, 179); padding: 25px">
                 ГЛАВНОЕ НЕ ПОБЕДА, А УЧАСТИЕ&#33;
             </td>
             <td></td>
