--- a/MAKET_TABLE.html
+++ b/MAKET_TABLE.html
@@ -17,7 +17,7 @@
             СОРЕВНОВАНИЙ&#33;
         </caption>
         <tr>
-            <td style="background-color: rgb(227, 230, 108); width: 200px">
+            <td style="background-color: rgb(227, 230, 108); width: 200px; vertical-align: top">
                 <ul>Виды спорта:
                     <li>
                         <a
@@ -100,7 +100,7 @@
                 </ul>
             </td>
             <td style="background: url('Images/ball.png'); background-position: right top; background-repeat: repeat-y">
-                <div style="font-size: 20px; padding: 5px; margin: 5px; overflow: hidden">
+                <div style="font-size: 20px; padding: 5px; margin: 5px; overflow: hidden; vertical-align: top">
                     <h3 style="text-align: center; font: bold">ФУТБОЛ</h3>
                     <img src="Images/football1.png" title="Команда выиграла кубок" alt="Команда выиграла кубок"
                         width="200" height="150" style="float: left; margin: 0px 15px 15px 0px">
