--- a/CSS_chess.html
+++ b/CSS_chess.html
@@ -28,13 +28,10 @@
         background-color: white;
       }
 
-      td:first-child {
-        visibility: hidden;
-      }
-
+      td:first-child, 
       td:last-child {
         visibility: hidden;
-      }
+      }     
 
       width: 50px;
       height: 50px;
@@ -49,10 +46,7 @@
         background-color: white;
       }
 
-      td:first-child {
-        visibility: hidden;
-      }
-
+      td:first-child,
       td:last-child {
         visibility: hidden;
       }
@@ -61,21 +55,14 @@
       height: 50px;
     }
 
-    tr:first-child {
-      visibility: hidden;
-      height: 15px;
-    }
-
+    tr:first-child, 
     tr:last-child {
       visibility: hidden;
       height: 15px;
-    }
+    }    
 
     tr {
-      td:first-child {
-        width: 15px;
-      }
-
+      td:first-child, 
       td:last-child {
         width: 15px;
       }
