--- a/LINKS.html
+++ b/LINKS.html
@@ -85,9 +85,13 @@
                 color: red;
             }
 
-            a:nth-child(even), 
-            a:nth-child(1), 
-            a:nth-child(3) {
+            /* a::after {
+                content: ' | ';
+                color: red;
+                font-weight: bolder;
+                font-size: 22px;
+            } */
+            a:nth-child(even) {
 
                 min-width: 60px;
                 border-right-color: red;
@@ -95,6 +99,21 @@
                 padding-right: 3px;
             }
 
+            a:nth-child(1) {
+
+                min-width: 60px;
+                border-right-color: red;
+                border-right-style: solid;
+                padding-right: 3px;
+            }
+
+            a:nth-child(3) {
+
+                min-width: 60px;
+                border-right-color: red;
+                border-right-style: solid;
+                padding-right: 3px;
+            }
         }
 
         /* Разделитель за счет границы и отступа. Плюс - простота. Минус- код не универсален, требуется точечная подгонка.
@@ -102,15 +121,29 @@
         .fifthlinks {
             min-width: 600px;
 
-            td:nth-child(even), 
-            td:nth-child(1), 
+            td:nth-child(even) {
+
+                min-width: 60px;
+                border-right-color: red;
+                border-right-style: solid;
+                padding-right: 3px;
+            }
+
+            td:nth-child(1) {
+
+                min-width: 60px;
+                border-right-color: red;
+                border-right-style: solid;
+                padding-right: 3px;
+            }
+
             td:nth-child(3) {
 
                 min-width: 60px;
                 border-right-color: red;
                 border-right-style: solid;
                 padding-right: 3px;
-            }           
+            }
 
             a:hover {
                 color: red;
