--- a/MAKET_DIV.html
+++ b/MAKET_DIV.html
@@ -101,7 +101,7 @@
             </div>
             
             <div style="background-color: white; font-size: 20px;  padding: 10px; margin-left: 200px; overflow: hidden; vertical-align: top">
-                <div style="background: url('Images/ball.png'); background-position: right top; background-repeat: repeat-y; overflow: hidden; min-height: 500px; vertical-align: top">
+                <div style="background: url('Images/ball.png'); background-position: right top; background-repeat: repeat-y; overflow: hidden; vertical-align: top">
                 <h3 style="text-align: center; font: bold">ФУТБОЛ</h3>
                 <img src="Images/football1.png" title="Команда выиграла кубок" alt="Команда выиграла кубок" width="200"
                     height="150" style="float: left; margin: 0px 15px 15px 0px">
