--- a/simonandgarfukel.html
+++ b/simonandgarfukel.html
@@ -8,34 +8,40 @@
 </head>
 
 <body>
-    <div style="border-style: dashed; border-color: red">
-    <h1>Simon and Garfunkel</h1>
+    <div style="margin: 30px 0px 30px 0 px">
+        <h1>Simon and Garfunkel</h1>
     </div>
     <br>
-    <div style="border-style: solid; border-color: yellowgreen; width: 560px">
-    <p>
-        В 1964 году на лейбле Columbia был выпущен их дебютный альбом &laquo;Wednesday Morning 3AM&raquo;. Пластинка
+    <div style="font-size: 22px;">
+        <img src="Images/sax.jpg" style="float: right">
+        В 1964 году на лейбле Columbia был выпущен их дебютный альбом &laquo;Wednesday Morning 3AM&raquo;.
+        Пластинка
         прошла практически незамеченной, после чего пути музыкантов пошли врозь.
-    </p>
-    <p>
-        В это время на долю музыкантов выпал неожиданный успех. Летом 1965 года импресарио Тим Уилсон, известный
+        <p style="text-align: center">
+        <div style="width:40px; color:red; font-size: 28px; float: left; margin: 5px 0px 5px 0px"> В </div>
+        это время на долю музыкантов выпал неожиданный успех. Летом 1965 года импресарио Тим Уилсон, известный
         продюсированием ранних альбомов Дилана, осовременил звучание песни &laquo;The Sounds of Silence&raquo;,
-        написанной Саймоном под впечатлением от убийства президента Кеннеди, наложив на неё электрические гитары и
+        написанной Саймоном под впечатлением от убийства президента Кеннеди, наложив на неё электрические гитары
+        и
         ударные.
-        <span style="text-decoration: underline">Без ведома авторов</span> новая версия была выпущена синглом и достигла
-        первой строчки в национальных чартах. Эта запись была признана музыкальными критиками 
+        <span style="text-decoration: underline">Без ведома авторов</span> новая версия была выпущена синглом и
+        достигла
+        первой строчки в национальных чартах. Эта запись была признана музыкальными критиками
         квинтэссенцией входившего тогда в моду фолк-рока.
-    </p>
-    <p>
-        Хотя Саймон и Гарфанкел были шокированы тем, что их самый успешный сингл был аранжирован и выпущен без их
-        участия, его триумфальное восхождение в чартах заставило их вновь объединить усилия и развернуть своё творчество
-        в сторону приглушённого акустического фолк-рока. За &laquo;The Sounds of Silence&raquo; последовали такие
-        жемчужины фолк-рока, как &laquo;A Hazy Shade of Winter&raquo; и &laquo;Homeward Bound&raquo; &mdash; возможно,
-        самые рафинированные и стильные образчики этого направления рок-музыки.
-    </p>
+        </p>
+        <p style="text-align: center">
+            Хотя Саймон и Гарфанкел были шокированы тем, что их самый успешный сингл был аранжирован и выпущен без
+            их
+            участия, его триумфальное восхождение в чартах заставило их вновь объединить усилия и развернуть своё
+            творчество
+            в сторону приглушённого акустического фолк-рока. За &laquo;The Sounds of Silence&raquo; последовали
+            такие
+            жемчужины фолк-рока, как &laquo;A Hazy Shade of Winter&raquo; и &laquo;Homeward Bound&raquo; &mdash;
+            возможно,
+            самые рафинированные и стильные образчики этого направления рок-музыки.
+        </p>
     </div>
     <br>
-    <div style="border-style: solid double solid solid; border-color: blue red darkgreen blue; border-width: 1px 3px 4px 1px">
     <h3>Студийные альбомы</h3>
     <ol style="list-style-type: disc">
         <li>Wednesday Morning, 3 A.M. (1964)</li>
@@ -45,13 +51,13 @@
         <li>Bookends (1968)</li>
         <li>Bridge Over Troubled Water (1970)</li>
     </ol>
-    </div>
     <br>
-    <div style="border-style: solid; border-color: yellowgreen">
-    <p style="font-size: 12px">Несмотря на отдельные яркие песни, альбомы Саймона и Гарфанкела были по большей части неровными и оставляли
-        ощущение недоговорённости. Наиболее радикальные критики были склонны обвинять дуэт в слащавости и стерильности.
+    <p style="font-size: 12px">Несмотря на отдельные яркие песни, альбомы Саймона и Гарфанкела были по большей части
+        неровными и оставляли
+        ощущение недоговорённости. Наиболее радикальные критики были склонны обвинять дуэт в слащавости и
+        стерильности.
     </p>
-    </div>
+
 </body>
 
 </html>
