--- a/Неплохие шаблоны/GALLERY.html
+++ b/Неплохие шаблоны/GALLERY.html
@@ -10,37 +10,42 @@
 
 <body>
     <div class="main">
-        <div class="content">
-            Лучшие мультики из доступных:
-        </div>
-        <div class="points">
+        <div class="full-screen">
+            <div class="full-screen_body">
+                <div class="full-screen_caption">
+                    Мультфильмы
+                </div>
+            </div>
+            <video class="full-screen_video" preload="metadata" autoplay loop muted>
+                <source src="../Video/20230606133413_0077.MP4" type="video/MP4">
+            </video>
+        </div>        
+        <div class="points"> 
             <div class="points_container">
                 <div class="points_body">
                     <div class="card">
                         <div class="card_video">
-                            <iframe src="https://www.youtube.com/embed/2X66FMVSVYA?si=S9yW1zaTNZnwzdRm"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                allowfullscreen>
-                            </iframe>
+                            <!-- <video preload="metadata" controls preload loop autoplay muted> -->
+                                <iframe src="https://www.youtube.com/embed/2X66FMVSVYA?si=S9yW1zaTNZnwzdRm" 
+                                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+
+                                </iframe>
+                            <!-- </video> -->
                         </div>
                         <div class="card_text">
                             <p>Смешной мульт про толстого кролика
                             </p>
                         </div>
                         <div class="card_href">
-                            <a href="https://www.youtube.com/embed/2X66FMVSVYA?si=S9yW1zaTNZnwzdRm"
-                                target="_blank">Смотреть на
+                            <a href="https://www.youtube.com/embed/2X66FMVSVYA?si=S9yW1zaTNZnwzdRm" target="_blank">Смотреть на
                                 YouTube
                             </a>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card_video">
-                            <iframe src="https://www.youtube.com/embed/jwcLDI1pgSg?si=hO8PWeWaCntfWFJ4"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                allowfullscreen>
+                            <iframe src="https://www.youtube.com/embed/jwcLDI1pgSg?si=hO8PWeWaCntfWFJ4" 
+                            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
 
                             </iframe>
                         </div>
@@ -49,18 +54,15 @@
                             </p>
                         </div>
                         <div class="card_href">
-                            <a href="https://www.youtube.com/embed/jwcLDI1pgSg?si=hO8PWeWaCntfWFJ4"
-                                target="_blank">Смотреть на
+                            <a href="https://www.youtube.com/embed/jwcLDI1pgSg?si=hO8PWeWaCntfWFJ4" target="_blank">Смотреть на
                                 YouTube
                             </a>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card_video">
-                            <iframe src="https://www.youtube.com/embed/HB_0kjfQC70?si=9qocHMTGrUSC4Dsy"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                allowfullscreen>
+                            <iframe src="https://www.youtube.com/embed/HB_0kjfQC70?si=9qocHMTGrUSC4Dsy" 
+                            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
 
                             </iframe>
                         </div>
@@ -69,18 +71,15 @@
                             </p>
                         </div>
                         <div class="card_href">
-                            <a href="https://www.youtube.com/embed/HB_0kjfQC70?si=9qocHMTGrUSC4Dsy"
-                                target="_blank">Смотреть на
+                            <a href="https://www.youtube.com/embed/HB_0kjfQC70?si=9qocHMTGrUSC4Dsy" target="_blank">Смотреть на
                                 YouTube
                             </a>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card_video">
-                            <iframe src="https://www.youtube.com/embed/L1bbN08o6Y4?si=H3xfDFWH-3yR2_r3"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                allowfullscreen>
+                            <iframe src="https://www.youtube.com/embed/L1bbN08o6Y4?si=H3xfDFWH-3yR2_r3" 
+                            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
 
                             </iframe>
                         </div>
@@ -89,8 +88,7 @@
                             </p>
                         </div>
                         <div class="card_href">
-                            <a href="https://www.youtube.com/embed/L1bbN08o6Y4?si=H3xfDFWH-3yR2_r3"
-                                target="_blank">Смотреть на
+                            <a href="https://www.youtube.com/embed/L1bbN08o6Y4?si=H3xfDFWH-3yR2_r3" target="_blank">Смотреть на
                                 YouTube
                             </a>
                         </div>
