--- a/Lesson13/forma__grid.html
+++ b/Lesson13/forma__grid.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,14 @@
     <link rel="stylesheet" href="forma__grid.css" type="text/css">
     <script src="https://kit.fontawesome.com/d23624fc6e.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div class="container">
         <h2>Настройки аккаунта</h2>
         <form>
             <div class="form-group">
                 <label>
-E-mail
+                    E-mail
                 </label>
                 <div class="input">
                     <input type="email" value="19922403wawa@gmail.com">
@@ -21,7 +23,7 @@ E-mail
             </div>
             <div class="form-group">
                 <label>
-Телефон
+                    Телефон
                 </label>
                 <div class="input">
                     <input type="tel" value="+375445518423">
@@ -29,22 +31,22 @@ E-mail
             </div>
             <div class="form-group">
                 <label>
-Пароль
+                    Пароль
                 </label>
-                <div class="input1">
+                <div class="input">
                     <input type="password" value="00000000">
-                
+
                     <button type="button">Изменить</button>
-                </div>                
+                </div>
             </div>
             <div class="form-group">
                 <label>
-Профили соцсетей
+                    Профили соцсетей
                 </label>
                 <div class="icons">
-                <a href="https://twitter.com/?lang=ru"><i class="fa-brands fa-twitter"></i></a>
-                <a href="https://www.facebook.com/?locale=ru_RU"><i class="fa-brands fa-facebook"></i>
-                    <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://twitter.com/?lang=ru"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/?locale=ru_RU"><i class="fa-brands fa-facebook"></i>
+                        <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://web.telegram.org/a/"><i class="fa-brands fa-telegram"></i></a>
                 </div>
             </div>
@@ -60,4 +62,5 @@ E-mail
         </form>
     </div>
 </body>
+
 </html>
